[package]
name = "vulkan-from-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.0", features = ["linked"] }
vk-shader-macros = "0.2.8"
winit = "0.27.5"
colored = "2"
ash-window = "0.12.0"
raw-window-handle = "0.5"
